# Block-Forge

./: .gitignore  .gitmodules  Block Forge.filters  Block Forge.sln  Block Forge.sln.DotSettings  Block Forge.vcxproj  Block.h  CMakeLists.txt  Doxyfile  DoxyfileConfig  LICENSE  README.md  Settings.json  Voxel Lobster.vcxproj  Voxel Lobster.vcxproj.filters  _application_8h_source.html  _biome_8h_source.html  _biome_placer_8h_source.html  _biome_provider_8h_source.html  _block_8h_source.html  _block_builder_8h_source.html  _block_face_model_8h_source.html  _block_map_8h_source.html  _block_model_8h_source.html  _block_provider_8h_source.html  _buffer_utils_8h_source.html  _camera_8h_source.html  _chunk_8h_source.html  _chunk_blocks_8h_source.html  _chunk_builder_8h_source.html  _chunk_frame_8h_source.html  _chunk_manager_8h_source.html  _chunk_mesh_8h_source.html  _chunk_mesh_utils_8h_source.html  _chunk_placer_8h_source.html  _chunk_renderer_8h_source.html  _chunk_utils_8h_source.html  _cube_order_8h_source.html  _cube_view_8h_source.html  _destroy_block_8h_source.html  (+449 more)
.github/: FastNoise2_workflow_setup.bat  GLAD_workflow_setup.bat  GLFW_workflow_setup.bat  setup_for_workflow.bat  test.bat
.github/workflows/: build.yml  build_linux.yml  build_macos.yml  build_test.yml  build_win.yml  documentation_check.yml  main.yml  sonarcloud.yml  unit_tests.yml  win_build.yml
Block Forge Tests/: Block Forge Tests.vcxproj  Block Forge Tests.vcxproj.filters  pch.h
Block Forge Tests/src/Core/: MetadataTests.cpp
data/: blocks.json  generators.json
data/shaders/: hud.vert
doc/html/: _application_8h_source.html  _block_8cpp.html  _block_8h.html  _block_8h_source.html  _log_8h_source.html  _metadata_8cpp.html  _metadata_8h.html  _metadata_8h_source.html  annotated.html  annotated_dup.js  class_application-members.html  class_application.html  class_block-members.html  class_block.html  class_log-members.html  class_log.html  class_metadata-members.html  class_metadata.html  class_metadata.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_a2f0e5642e47e7ed59fe0f0829eafb5f.html  dir_a2f0e5642e47e7ed59fe0f0829eafb5f.js  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  main_8cpp.html  navtreedata.js  navtreeindex0.js
doc/html/search/: all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_3.js  files_0.js  files_1.js  functions_1.js  functions_2.js  functions_4.js  functions_9.js  searchdata.js
doc/latex/: _application_8h_source.tex  _block_8cpp.tex  _block_8h.tex  _block_8h_source.tex  _log_8h_source.tex  _metadata_8cpp.tex  _metadata_8h.tex  _metadata_8h_source.tex  annotated.tex  class_application.tex  class_block.tex  class_log.tex  class_metadata.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_a2f0e5642e47e7ed59fe0f0829eafb5f.tex  files.tex  main_8cpp.tex  refman.tex
include/application/: application.h  main_menu_layer.h  window.h
include/application/hid/: human_interface_device.h  key_codes.h
include/application/layer_stack/: layer_stack.h
include/core/: engine_exceptions.h  file_utils.h  log.h  metadata.h  opengl_headers.h
include/debug/: timer.h
scripts/: setup.bat  win_x64.bat  win_x64_dbg.bat  win_x86.bat  win_x86_dbg.bat
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  (+28 more)
src/: main.cpp
src/Application/: Application.cpp  Application.h  ApplicationUtils.h  EventListener.h  EventQueue.h  LayerStack.cpp  LayerStack.h  MainMenu.cpp  MainMenu.h  MainMenuLayer.cpp  Window.h  main_menu_layer.cpp
src/Application/Event/: Event.cpp  Event.h  EventQueue.h  HumanInterfaceDevice.cpp  HumanInterfaceDevice.h  InputEvent.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
src/Application/HID/: HID.cpp  HID.h  HIDEventReporter.cpp  HIDEventReporter.h  HIDMap.h  HumanInterfaceDevice.cpp  HumanInterfaceDevice.h  KeyCodes.h
src/Application/HumanInterfaceDevice/: HumanInterfaceDevice.cpp
src/Application/Layer/: Layer.h
src/Application/LayerStack/: LayerStack.h
src/Application/Sandbox/: Camera.cpp  Camera.h  Hud.cpp  Hud.h  Sandbox.cpp  Sandbox.h  World.h
src/Application/hid/: human_interface_device.cpp
src/Core/: Application.cpp  Application.h  Block.cpp  Block.h  EngineExceptions.h  FileUtils.cpp  FileUtils.h  Log.cpp  Log.h  MainMenu.cpp  MainMenu.h  Metadata.cpp  Metadata.h  file_utils.cpp
src/Data/: Biomes.json  Blocks.json  Config.json  Generators.json
src/Data/Shaders/: Block.frag  Block.vert  Hud.frag  Hud.vert
src/DebugTools/: Timer.h
src/Sandbox/: Block.cpp  Block.h  Blocktest.cpp  Blocktest.h  Camera.cpp  Camera.h  FPSCounter.cpp  FPSCounter.h  Sandbox.cpp  Sandbox.h  World.cpp  World.h
src/Sandbox/Events/: HumanInterfaceDevice.cpp  HumanInterfaceDevice.h  KeyCodes.h
src/Sandbox/Mesh/: Block.cpp  Block.h
src/Sandbox/Model/: BlockFaceModel.cpp  BlockFaceModel.h  BlockModel.h  Model.cpp  Model.h
src/Sandbox/Noise/: Noise.h  Noise2D.cpp  Noise2D.h  Noise3D.cpp  Noise3D.h
src/Sandbox/Utils/: BufferUtils.h  ChunkUtils.cpp  ChunkUtils.h  ElementBuffer.cpp  ElementBuffer.h  EngineExceptions.h  FPSCounter.cpp  Noise.cpp  Noise.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
test/: Block Forge Tests.exp  Block Forge Tests.lib  Block Forge Tests.vcxproj  test.vcxproj
test/Block Forge Tests/: Block Forge Tests.vcxproj
test/src/: UnitTestsConfig.h
tests/: CMakeLists.txt  packages.config
tests/mocks/metadata/: getters_and_setters.json
tests/src/: unit_tests_config.h
tests/src/core/: block_tests.cpp  metadata_tests.cpp
(+292 files in other folders)
